public/css/styles.css
:root {
	--font-family: "MS PMincho", monospace;
	--color-text: #EEE;
	--color-background: #111;
	--color-support: #888;
	--color-accent: #0EE;

	--selection-text: #000;
	--selection-background: #0EE;

	line-height: 1.25rem;
	font-weight: 400;
	word-wrap: break-word;

	font-synthesis: none;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;

	font-optical-sizing: auto;
	font-style: normal;
	font-variation-settings: "wdth" 100;
}

* {
	font-weight: 400;
}

body {
	font-family: var(--font-family);
	color: var(--color-text);
	background: var(--color-background);
}

a {
	color: var(--color-text);
}

a:hover,
a:focus {
	color:var(--color-accent);
}


hr {
	/* https://usgraphics.com/ */
	background: radial-gradient(#777 .5px, transparent 1px) 0 0 / 3px 3px, transparent;
	border: none;
	height: 1rem;
	max-height: 1rem;
	margin: 2rem 0;
}

h1 {
	margin: 0.25rem 0;
	margin-top: 0;
}

h2, h3, p {
	font-size: 1rem;
}

#content {
	max-width: 80ch;
	margin: 1rem auto;
	padding: 1rem;
}

.header {

}
	.header__title {
		margin-bottom: 0.75rem;
	}
	.header__subtitle {
		margin: 0;
	}

.aboutMe__paragraph:first-child {
	margin-top: 0;
}

.aboutMe__paragraph:last-child {
	margin-bottom: 0;
}

.projects,
.contact {
	list-style-type: none;
	list-style-position: inside;
	padding: 0;
	margin: 0;
}

.panelSegment {
	display: flex;
	/* gap: 1rem; */
}
@media screen and (max-width: 960px) {
	.panelSegment {
		flex-direction: column;
	}
}
	.panelSegment + .panelSegment {
		margin-top: 2rem;
		padding-top: 2rem;
		border-top: 1px dotted var(--color-support);
	}
	.panelSegment__header {
		flex: none;
		width: 22ch;
		max-width: 22ch;
	}

	@media screen and (max-width: 960px) {
		.panelSegment__header {
			margin-bottom: 1rem;
		}
	}

	.panelSegmenet__title {
		font-size: 1rem;
		margin: 0;
		padding: 0;
	}

	.panelSegmenet__content {

	}

.projects__entry {
	position: relative;
}

.projects__entry:not(:last-child) {
	margin-bottom: 2rem;
}

.projects__name {
	margin: 1rem 0;
	margin-top: 0;
}

.projects__link {
	filter: saturate(0) brightness(0.8);
	transition: 0.2s;
}

.projects__link:hover,
.projects__link:focus {
	transition: 0.2s;
	filter: saturate(1) brightness(1);
}

.projects__hoverMessage {
	z-index: 1;
	position: absolute;
	bottom: 0;
	right: 0;
	margin: 0.25rem;
	padding: 0.25rem;
	user-select: none;
	pointer-events: none;
	opacity: 1;
	transition: 0.2s;
	background: var(--color-background);
}

.projects__link:hover .projects__hoverMessage,
.projects__link:focus .projects__hoverMessage {
	transition: 0.2s;
	opacity: 0;
}

.projects__paragraph {
	margin: 1rem 0;
}

.contact__space {
	visibility: hidden;
}

.projects.projects--secondary {
	display: flex;
	flex-direction: row;
	gap: 1rem;
	flex-wrap: wrap;
	justify-content: space-between;
}

.projects--secondary .projects__entry {
	flex: 0.5;
	min-width: 40%;
}

.tags {
	list-style-type: none;
	padding: 0;
	display: flex;
	gap: 0.5rem;
}

	.tags__entry {
		border: 1px solid var(--color-text);
		padding: 2px 3px;
		box-shadow: 2px 2px var(--color-support);
	}

/* hover-video-player:not(:defined) {
	display: none;
} */

hover-video-player, video, img {
	width: 100%;
	display: block;
}

p {
	/* margin: 0; */
}

.markdown h1 {
	font-size: 3rem;
	padding: 1rem;
	/* margin: 1rem; */
	border: 1px solid var(--color-text);
	box-shadow: 2px 2px var(--color-support);
}

.markdown h2 {
	font-size: 2rem;
	display: block;
	border-bottom: 1px dotted var(--color-support);
	padding-bottom: 0.5rem;
	margin-top: 2rem;
	margin-bottom: 1rem;
}

.markdown p > code {
	--c: lch(from var(--color-support) calc(l - 35) c h);
	background: var(--c);
	outline: 0.125rem solid var(--c);
}

.markdown pre {
	border: 1px solid var(--color-support);
	padding: 1rem;
	tab-size: 2;
	overflow: auto;
}

.markdown iframe {
	margin: 1rem auto;
	display: block;
}

